--- a/Project/workspace/MapYou/res/layout/user_profile_mapme_grid.xml
+++ b/Project/workspace/MapYou/res/layout/user_profile_mapme_grid.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:clickable="true" >
 
     <ImageView
         android:id="@+id/imageView1"
@@ -13,26 +14,40 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/profile" />
 
-    <TextView
-        android:id="@+id/textViewNickname"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/h1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="25dp"
         android:layout_toRightOf="@+id/imageView1"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:scrollbars="horizontal" >
 
-    <TextView
-        android:id="@+id/textViewEmail"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/textViewNickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+    </HorizontalScrollView>
+
+    <HorizontalScrollView
+        android:id="@+id/h2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewNickname"
+        android:layout_alignLeft="@+id/h1"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textViewNickname"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="14sp" />
+        android:layout_below="@+id/h1"
+        android:scrollbars="horizontal" >
+
+        <TextView
+            android:id="@+id/textViewEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="14sp" />
+    </HorizontalScrollView>
 
 </RelativeLayout>
