--- a/Project/workspace/MapYou/res/layout/new_map_me.xml
+++ b/Project/workspace/MapYou/res/layout/new_map_me.xml
@@ -33,7 +33,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:orientation="horizontal" >
