--- a/Project/workspace/MapYou/res/layout/mapme_list.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="true"
+    android:orientation="vertical"
     android:scrollbars="vertical" >
 
     <ListView
@@ -15,4 +15,4 @@
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" />
 
-</ScrollView>
+</LinearLayout>
