--- a/Project/workspace/MapYou/res/layout/complete_mapme_first_tab.xml
+++ b/Project/workspace/MapYou/res/layout/complete_mapme_first_tab.xml
@@ -7,5 +7,25 @@
     android:fillViewport="true"
     android:scrollbars="vertical|horizontal" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+        
+         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp" >
+
+            <fragment
+                android:id="@+id/completeMapMapMeFirstTab"
+                android:name="com.google.android.gms.maps.MapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="0dp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </ScrollView>
