--- a/Project/workspace/MapYou/res/menu/menu.xml
+++ b/Project/workspace/MapYou/res/menu/menu.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/refresh"
-        android:icon="@drawable/refresh"
-        android:showAsAction="ifRoom"
+        android:id="@+id/action_searchHome"
+        android:orderInCategory="100"
+        android:showAsAction="never"
         android:onClick="refresh"
-        
-       />
+        android:title="Refresh"/>
+
+
 
 </menu>
