--- a/Project/workspace/MapYou/res/layout/mapme_first_tab.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_first_tab.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
+    android:background="@color/AliceBlue"
     android:fillViewport="true"
     android:scrollbars="vertical|horizontal" >
 
@@ -19,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="40dp" >
+            android:layout_marginTop="60dp" >
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -103,17 +104,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="50dp" >
+            android:layout_marginTop="50dp"
+            android:gravity="center"
+            android:orientation="vertical" >
 
             <Button
                 android:id="@+id/live"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.25"
-                android:background="@drawable/button"
+                android:background="@drawable/livemode"
                 android:gravity="center"
+                android:onClick="live" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="123dp"
+                android:layout_height="38dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.41"
+                android:background="@drawable/button"
+                android:clickable="true"
                 android:onClick="live"
-                android:text="Button" />
+                android:paddingTop="5dp"
+                android:text="  Live mode"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
         </LinearLayout>
 
