--- a/Project/workspace/MapYou/res/layout/chatusertouser.xml
+++ b/Project/workspace/MapYou/res/layout/chatusertouser.xml
@@ -10,6 +10,63 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
+        <RelativeLayout
+            android:id="@+id/RelativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="0dp" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/h2"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@+id/h1"
+                android:src="@drawable/profile" />
+
+            <HorizontalScrollView
+                android:id="@+id/h1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@+id/imageView1"
+                android:scrollbars="horizontal" >
+
+                <TextView
+                    android:id="@+id/textViewNickname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+            </HorizontalScrollView>
+
+            <HorizontalScrollView
+                android:id="@+id/h2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/h1"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@+id/imageView1"
+                android:scrollbars="horizontal" >
+
+                <TextView
+                    android:id="@+id/textViewEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="14sp" />
+
+            </HorizontalScrollView>
+        </RelativeLayout>
+
         <ListView
             android:id="@+id/listViewUsertoUser"
             android:layout_width="match_parent"
@@ -39,7 +96,7 @@
                 android:layout_height="33dp"
                 android:layout_weight="1"
                 android:onClick="sendmessage"
-                android:src="@drawable/send" />
+                android:src="@drawable/send_message" />
         </LinearLayout>
     </LinearLayout>
 
