--- a/Project/workspace/MapYou/res/layout/broadcastchat.xml
+++ b/Project/workspace/MapYou/res/layout/broadcastchat.xml
@@ -1,14 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sswes"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ssssss"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+
+        <LinearLayout
+            android:id="@+id/LinearLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="0dp"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:src="@drawable/broadcast" />
+
+            <TextView
+                android:id="@+id/textNameMapmeBrod"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="MapMe: "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textNumuserMaBrod"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Users: "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
         <ListView
             android:id="@+id/listView1"
@@ -23,25 +63,24 @@
             android:layout_height="wrap_content" >
 
             <EditText
-                android:id="@+id/editTextBroadcast"
+                android:id="@+id/editTextB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="send brodcast" >
+                android:hint="send message" >
 
                 <requestFocus />
             </EditText>
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/chatusertouser"
                 android:layout_width="33dp"
                 android:layout_height="33dp"
                 android:layout_weight="1"
-                android:onClick="broadc"
-                android:clickable="true"
-                android:src="@drawable/send" />
+                android:onClick="broadcastmess"
+                android:src="@drawable/send_message" />
         </LinearLayout>
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
