--- a/Project/workspace/MapYou/res/layout/chatlayouthome.xml
+++ b/Project/workspace/MapYou/res/layout/chatlayouthome.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swq"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center"
+            android:layout_weight="0.08"
+            android:src="@drawable/chatmenu" />
 
         <GridView
             android:id="@+id/gridView1"
             android:layout_width="match_parent"
             android:layout_height="316dp"
             android:layout_weight="0.08"
-            android:numColumns="2" >
+            android:horizontalSpacing="5dp"
+            android:numColumns="2"
+            android:paddingBottom="20dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp"
+            android:verticalSpacing="10dp" >
         </GridView>
 
         <Button
@@ -23,10 +38,13 @@
             android:layout_width="173dp"
             android:layout_height="38dp"
             android:layout_gravity="center"
-            android:background="@drawable/button"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/mybuttongreen"
             android:onClick="broadcast"
-            android:text="Broadcast" />
+            android:text="Chat Broadcast"
+            android:textStyle="bold"
+            android:typeface="monospace" />
 
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
