--- a/Project/workspace/MapYou/res/layout/broadcat_single_chat.xml
+++ b/Project/workspace/MapYou/res/layout/broadcat_single_chat.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="10dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="17sp" />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:id="@+id/p"
@@ -30,7 +30,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textUserBroadcast"
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -39,14 +39,20 @@
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/Blue"
-            android:textSize="12sp" />
+            android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/textMessageDate"
+            android:id="@+id/textMessageDateB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Small Text"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
     </LinearLayout>
 
 </RelativeLayout>
