--- a/Project/workspace/MapYou/res/menu/menu.xml
+++ b/Project/workspace/MapYou/res/menu/menu.xml
@@ -1,10 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_searchHome"
-        android:orderInCategory="100"
+        android:id="@+id/delete_user"
         android:showAsAction="never"
-        android:onClick="refresh"
+        android:title="Delete user"/>
+    
+     <item
+        android:id="@+id/refreshUser"
+        android:showAsAction="never"
         android:title="Refresh"/>
 
 
