--- a/Project/workspace/MapYou/res/layout/user_profile_grid_delete_in_mapme.xml
+++ b/Project/workspace/MapYou/res/layout/user_profile_grid_delete_in_mapme.xml
@@ -8,7 +8,7 @@
     android:clickable="true" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageViewDeleteUser"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
@@ -23,33 +23,16 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="25dp"
-        android:layout_toRightOf="@+id/imageView1"
+        android:layout_toRightOf="@+id/imageViewDeleteUser"
         android:scrollbars="horizontal" >
 
         <TextView
-            android:id="@+id/textViewNickname"
+            android:id="@+id/textViewNicknameDeleteUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="14sp"
             android:textStyle="bold" />
-    </HorizontalScrollView>
-
-    <HorizontalScrollView
-        android:id="@+id/h2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/h1"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/h1"
-        android:scrollbars="horizontal" >
-
-        <TextView
-            android:id="@+id/textViewEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="14sp" />
     </HorizontalScrollView>
 
 </RelativeLayout>
