--- a/Project/workspace/MapYou/res/layout/chatlayouthome.xml
+++ b/Project/workspace/MapYou/res/layout/chatlayouthome.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:text="Users in: "
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/LightBlue"
+            android:textColor="@color/Black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -31,13 +31,13 @@
             android:layout_width="match_parent"
             android:layout_height="316dp"
             android:layout_weight="0.08"
-            android:horizontalSpacing="5dp"
+            android:horizontalSpacing="10dp"
             android:numColumns="2"
             android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="20dp"
-            android:verticalSpacing="10dp" >
+            android:verticalSpacing="20dp" >
         </GridView>
 
         <Button
