--- a/Project/workspace/MapYou/res/layout/mapme_first_tab.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_first_tab.xml
@@ -18,37 +18,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="60dp" >
+            android:layout_marginTop="30dp" >
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="35dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="70dp"
                 android:src="@drawable/profile" />
 
             <TextView
                 android:id="@+id/textViewNickname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="nickname"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="35dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/startlocation" />
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:src="@drawable/start" />
 
             <HorizontalScrollView
                 android:id="@+id/h"
@@ -78,9 +82,9 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="35dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/endlocation" />
+                android:layout_width="50dp"
+                android:layout_height="35dp"
+                android:src="@drawable/end" />
 
             <HorizontalScrollView
                 android:id="@+id/hj"
@@ -104,15 +108,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="35dp"
             android:gravity="center"
             android:orientation="vertical" >
 
             <Button
                 android:id="@+id/live"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/livemode"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:background="@drawable/live"
                 android:gravity="center"
                 android:onClick="live" />
 
@@ -122,7 +126,7 @@
                 android:layout_height="38dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="0.41"
-                android:background="@drawable/button"
+                android:background="@drawable/mybuttongreen"
                 android:clickable="true"
                 android:onClick="live"
                 android:paddingTop="5dp"
