--- a/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
@@ -17,12 +17,16 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="18dp"
             android:gravity="center"
-            android:numColumns="auto_fit" >
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:paddingLeft="30dp"
+            android:verticalSpacing="20dp" >
+
         </GridView>
 
         <Button
             android:id="@+id/buttonSendPartecipation"
-            android:layout_width="238dp"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="0.37"
@@ -33,7 +37,7 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="240dp"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_weight="0.23"
