--- a/Project/workspace/MapYou/res/layout/user_profile_mapme_grid.xml
+++ b/Project/workspace/MapYou/res/layout/user_profile_mapme_grid.xml
@@ -27,9 +27,11 @@
             android:id="@+id/textViewNickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="14sp"
             android:textStyle="bold" />
+
     </HorizontalScrollView>
 
     <HorizontalScrollView
