--- a/Project/workspace/MapYou/res/layout/delete_user_in_mapme.xml
+++ b/Project/workspace/MapYou/res/layout/delete_user_in_mapme.xml
@@ -16,21 +16,27 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="18dp"
+            android:layout_weight="2"
             android:gravity="center"
-            android:numColumns="auto_fit" >
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:paddingLeft="30dp"
+            android:verticalSpacing="20dp" >
         </GridView>
 
         <LinearLayout
             android:id="@+id/fsda"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center" >
 
             <Button
                 android:id="@+id/buttonConfirmDeleteUser"
-                android:layout_width="238dp"
+                android:layout_width="103dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_weight="0.37"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/mybuttongreen"
                 android:gravity="center"
                 android:onClick="confirmDelete"
@@ -38,10 +44,9 @@
 
             <Button
                 android:id="@+id/buttonCancelDeleteUser"
-                android:layout_width="240dp"
+                android:layout_width="108dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_weight="0.23"
                 android:background="@drawable/button"
                 android:onClick="cancelDelete"
                 android:text="Cancel" />
