--- a/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
@@ -21,30 +21,40 @@
             android:numColumns="2"
             android:paddingLeft="30dp"
             android:verticalSpacing="20dp" >
-
         </GridView>
 
-        <Button
-            android:id="@+id/buttonSendPartecipation"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.37"
-            android:background="@drawable/mybuttongreen"
-            android:gravity="center"
-            android:onClick="sendPartecipation"
-            android:text="Send partecipation" />
+        <LinearLayout
+            android:id="@+id/sdfgdsg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.23"
-            android:background="@drawable/button"
-            android:onClick="refresh"
-            android:text="Refresh" />
+            <Button
+                android:id="@+id/buttonSendPartecipation"
+                android:layout_width="123dp"
+                android:layout_height="50dp"
+                android:background="@drawable/mybuttongreen"
+                android:gravity="center"
+                android:onClick="sendPartecipation"
+                android:text="Send Invite" />
 
+            <Button
+                android:id="@+id/ButtonDelete"
+                android:layout_width="92dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button"
+                android:onClick="deleteUser"
+                android:text="Delete" />
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="92dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:background="@drawable/mybuttongreen"
+                android:onClick="refresh"
+                android:text="Refresh" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
