--- a/Project/workspace/MapYou/res/layout/new_map_me.xml
+++ b/Project/workspace/MapYou/res/layout/new_map_me.xml
@@ -15,27 +15,75 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
             <EditText
                 android:id="@+id/EditTextNameMapMe2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="0.19"
                 android:ems="10"
-                android:gravity="center"
+                android:gravity="left"
                 android:hint="MapMe name"
-                android:inputType="textPostalAddress" />
+                android:inputType="textPostalAddress"
+                android:paddingLeft="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="left"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/kui"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:gravity="center" >
+
+                <TextView
+                    android:id="@+id/TextView01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select maximum number of users"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/dasda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <SeekBar
+                    android:id="@+id/seekBar1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="0.81" />
+
+                <TextView
+                    android:id="@+id/textViewMaxNumUsers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
+                    android:text="25"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal" >
 
             <EditText
@@ -44,9 +92,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.56"
                 android:ems="10"
-                android:gravity="center"
+                android:gravity="left"
                 android:hint="start"
-                android:inputType="textPostalAddress" />
+                android:inputType="textPostalAddress"
+                android:paddingLeft="10dp" />
 
             <Button
                 android:id="@+id/ButtonStartMapme2"
@@ -62,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal" >
 
             <EditText
@@ -71,9 +120,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.76"
                 android:ems="10"
-                android:gravity="center"
+                android:gravity="left"
                 android:hint="destination"
-                android:inputType="textPostalAddress" >
+                android:inputType="textPostalAddress"
+                android:paddingLeft="10dp" >
 
                 <requestFocus />
             </EditText>
@@ -93,7 +143,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
