--- a/Project/workspace/MapYou/res/layout/chatusertouser.xml
+++ b/Project/workspace/MapYou/res/layout/chatusertouser.xml
@@ -69,8 +69,12 @@
             android:id="@+id/listViewUsertoUser"
             android:layout_width="match_parent"
             android:layout_height="394dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="0.76" >
+
         </ListView>
 
         <LinearLayout
